talentdashboard/static/css/scoutmap/app/navigation.less
nav {
  	position: fixed !important;
  	top: 0 !important;
  	left: 0 !important;
  	z-index: 20;
  	width: 70px !important;
  	height: 100% !important;
  	background-color:#323940;

    /* For mobile experiences we move the navigation bar to the top of the viewport */
    @media only screen and (max-width : 640px) {
        width: 100% !important;
        height: 44px !important;
    }	
}
.nav-item-active{
	background-color: #282f34;
}


.nav-item .subnav {
	display: none;
}


.nav-item-active .subnav {
	display: block;
}

.account-menu {
	position:absolute; 
	top:10px; 
	right:5px;

    @media only screen and (max-width : 640px) {
        z-index: 99;
        top: 7px;
        position:fixed; 
    }	

	.small-headshot {
		width:30px;
		border-radius: 90px;
	}

	.account-action-items {
		background: #fff;
	  	border: 1px solid #ccc;
	  	padding: 10px;
	  	width: 100px;
	  	z-index: 9;
	  	left: -100px;
	  	border-radius: 3px;
	  	box-shadow: 3px 3px 5px -3px #444444;
		position: absolute;
	  	top: -5px; 
	  	display: none; 	
	}

	.fa {
		color: #777;
	}
}
.account-menu:hover, .account-action-items:hover {
	.account-action-items {
		display: block;
	}
}

/* Navigation Logo */
.logo-container {
	width: 70px;
	height: 70px;
	background-color: #0f9d58;


    /* For mobile experiences we move the navigation bar to the top of the viewport */
    @media only screen and (max-width : 640px) {
        height: 44px;
        width: 44px;
        float: left;
    }

	.logo {
		width: 100%;
		padding: 12px;
    	-webkit-transition: -webkit-transform .3s ease-in-out;
    	-ms-transition: -ms-transform .3s ease-in-out;
    	transition: transform .3s ease-in-out;	

	    @media only screen and (max-width : 640px) {
	        padding: 5px;
	    }

	}
	.logo:hover {
    	transform:rotate(360deg);
    	-ms-transform:rotate(360deg);
    	-webkit-transform:rotate(360deg);	
	}
}





/* Sub navigation */
.subnav{
	width: 280px;
  	top: 70px;
  	position: absolute;
  	left: 70px;
  	background: #282f34;
  	text-align: left;
  	box-shadow: 7px 3px 20px -4px #555;
  	padding-bottom: 15px;


    @media only screen and (max-width : 640px) {
        top: 43px;
        left: 0;
        width: 100%;
    }	
}
.subnav-reports {
	top: 290px;

    @media only screen and (max-width : 640px) {
        top: 43px;
    }	
}
.subnav-settings {
	top: 399px;

    @media only screen and (max-width : 640px) {
        top: 43px;
    }		
}
.subnav-search {
	top: 465px;

    @media only screen and (max-width : 640px) {
        top: 43px;
    }		
}
.subnav-employees {
	top: 138px;

    @media only screen and (max-width : 640px) {
        top: 43px;
    }		
}



.subnav-title {
	color: #fff;
	padding: 5px 15px 10px;
	font-size: 20px;
	margin: 15px 15px 0;
	border-radius: 5px;

	ul {
		padding: 5px 20px;
	}
}

.my-team-title {
	margin: 0 -10px;
    padding: 10px 10px 10px;
    color: #fff;
}


/*== BRANDING ===================================================== */
.customer-name {
	color: #cbcbcb;
  	font-weight: bold;
  	font-size: 18px;
  	margin: 10px 20px;
  	display: block;
  	float: left;
}
.customer-name:hover {
	color: #fff;
	text-decoration: none;
}


/*== NAVIGATION ===================================================== */
.nav-item {
  padding: 10px 15px;
  cursor: pointer;
  text-align: center;

    @media only screen and (max-width : 640px) {
    	padding: 3px 10px;
    	float: left;
    }	    
}
.nav-item .nav-item-icon {
  color: #ccc;
  font-size: 34px;
  margin: 6px 2px;
  opacity: .8;

    @media only screen and (max-width : 640px) {
    	font-size: 25px;
    }	  
}
.nav-item .nav-item-icon:hover {
	opacity: 1;
	color: #fff;
}

.talent-groups li {
	overflow: hidden;

	a{
		padding: 8px 12px;
	}
	span {
		padding: 3px 15px;
  		display: inline-block;
	}
}


.subnav a{
	text-transform:none;
	display:block;
	color:#cbcbcb;
	padding:6px 10px;
	font-weight:400;
	-webkit-transition:background-color 0.2s ease-out;
	-moz-transition:background-color 0.2s ease-out;
	-o-transition:background-color 0.2s ease-out;
	transition:background-color 0.2s ease-out;
	margin: 0 20px;
}
.subnav a:hover{
	background-color:#56616a;
	border-radius: 3px;
}

.subnav-scroll {
	overflow-x: hidden;
    height: 400px;
    overflow-y: scroll;
}

